# csr-example-leptos-supabase

./: .gitignore  404.html  505.html  Cargo.toml  README.md  build.rs  csr-example-leptos-supabase_bg.wasm  index.html  leptos_supabase_example-279d311fda3ead5f.js  leptos_supabase_example-279d311fda3ead5f_bg.wasm  leptos_supabase_example-390224c07c5a101d.js  leptos_supabase_example-390224c07c5a101d_bg.wasm  leptos_supabase_example-57f85ee4257a3e38.js  leptos_supabase_example-740e3cffdf6c2c47.js  leptos_supabase_example-b81b1ff018f9fb55.js  leptos_supabase_example-ea51b686c7ebc38c.js  leptos_supabase_example-ea51b686c7ebc38c_bg.wasm  leptos_supabase_example-ea5f5655cdd3ce03.js  leptos_supabase_example.js  leptos_supabase_example_bg.wasm  rustfmt.toml  style.css  trunk.toml
.github/workflows/: diversable-deploy.yaml  james.yaml  main.yml  routing_test.yml  rtest.yml
src/: app.rs  lib.rs  main.rs
src/components/: home.rs  login.rs  mod.rs  signup.rs
src/core/: helper.rs  mod.rs  models.rs
