[package]
name = "leptos_supabase_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.5.4", features = ["csr"] }
web-sys = { version = "0.3.66", features = ["Storage"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
postgrest = "1.6.0"
serde_json = "1.0.108"
leptos_router = { version = "0.5.4", features = ["csr"] }
base64 = { version = "0.21.5"  }
reqwest = "0.11.23"
futures = "0.3.30"
leptos-use = { version = "0.9.0", features = ["prost" ,"serde","serde_json"] }
wasm-bindgen = "0.2.90"
[build-dependencies]
dotenvy = "0.15.7"
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-04"]
