[package]
name = "csr-example-leptos-supabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
web-sys = { version = "0.3.67", features = ["Storage"] }
console_log = "1"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.196", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
postgrest = "1.6.0"
serde_json = "1.0.113"
leptos_router = { version = "0.6.5", features = ["csr"] }
base64 = { version = "0.21.7"  }
reqwest = "0.11.24"
futures = "0.3.30"
leptos-use = { version = "0.10.1", features = ["prost" ,"serde","serde_json"] }
wasm-bindgen = "0.2.90"
[build-dependencies]
dotenvy = "0.15.7"
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-04"]
